# template

./: .gitignore  .gitmodules  README.md  gulpfile.babel.js
android/: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
apps/app-house-keeper/: README.md
apps/app-house-keeper-worker/: README.md
build-script-output/: README.md
build-script-output/src/: Build.js
build-script/model/: CommonModel.js
cms/cms-house-keeper/: README.md
cms/cms-house-keeper-users/: README.md
devops/centos7/: centos7-cluster-windows-hyper-v-remote-connect.md  centos7-cluster-windows-hyper-v.md
devops/docker/: commands.md  install.md
devops/kubernetes/: commands.md  install.md
gulp/: .eslintrc.js  .gitignore  README.md  gulpfile.babel.js  gulpfile.js  module.js  package.json
gulp/build-script/: Build.js
gulp/build-script-output/: README.md
html/: .gitignore  README.md  gulpfile.babel.js  package.json
hybird/: README.md  home.html  index.html  package-lock.json  package.json
ios/: Podfile  README.md
ios/fruit-shop-ios/: Info.plist
ios/fruit-shop-ios.xcodeproj/: project.pbxproj
ios/fruit-shop-ios.xcworkspace/: contents.xcworkspacedata
mobile/IOS/: .gitignore
mobile/android/: .gitignore  README.md  build.gradle  gradle.properties  install.py  settings.gradle
mobile/android/app/libraries/library-base/src/main/cpp/: CMakeLists.txt  native-lib-1.cpp  native-lib-2.cpp  native-lib.cpp
mobile/flutter/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
mobile/flutter_app/: README.md  pubspec.yaml
mobile/flutter_module/: .gitignore  README.md  README_DEV.md  local.properties  pubspec.yaml
mobile/flutter_smart/: .gitignore  README.md  pubspec.yaml
mobile/hybird_vue/: .eslintrc.js  README.md  index.html  package.json
mobile/hybird_vue3_single_html/: vue3-example.html
mobile/nextjs/: .babelrc  .eslintrc.js  .gitignore  README.md  README_DEV.md  next.config.js  package-lock.json  package.json
mobile/react_app/: .eslintrc.js  .prettierrc  package-lock.json
mobile/react_native/: .eslintrc.js  .gitignore  README.md  babel.config.js  package.json
mobile/react_native_expo/: App.js  App.test.js  app.json
mobile/wechat/: app.json  app.wxss  common.wxss  project.config.json  readme.md
mobile/wechat_mpvue/: package-lock.json  package.json  project.config.json
pc/nextjs-v11-antd-pc/: .babelrc  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  README_DEV.md  babel.config.js  next.config.js  package-lock.json  package.json  server.js  webpack.config.js
pc/pc_web_gulp/: .gitignore
pc/pc_web_static/: index.html
pc/pc_webpack/: .gitignore  package.json
pc/reactapp-antd-pc/: package.json
readme/scripts/: README.md  proguardConfiguration.txt  proguard_base.pro  reformat_prefix.py
readme/ui/: README.md  appIcon1024x1024.psd
script/: origin.csv  rename.py  reordername.py
script/files_new/: 1-1-2.txt  1-2.txt
servers/server-house-keeper/: README.md  build.gradle  settings.gradle
webpack/: package.json  webpack.config.js
(+4111 files in other folders)
